# lura

./: DEVOTION  README.md  config.yaml  lura.db  pyproject.toml  pyproject.toml_  pyproject.toml__  setup.py  tags  todos.md
db/: bookmarks.db
lura/: __init__.py  config.ini  config.yaml  lura.py  main.py  plugins  run.py  todo.txt
lura.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
lura/core/: __init__.py  actions.py  buffer.py  display.py  docks.py  main.py  plugin.py  stack.py  statusbar.py  table.py  tables.py  window.py
lura/core/docks/: dock.py  docks.py
lura/core/miscel/: __init__.py  item.py  itemmodel.py  maptree.py  splitter.py
lura/core/plugin/: __init__.py  new_plugin.py  plugin.py  plugins.py
lura/core/todo/: command.py  window_.py
lura/core/viewer/: cursor.py  layout.py  pageitem.py  settings.py  viewer.py
lura/core/widgets/: __init__.py  filter.py  quickmark.py  splitter.py
lura/core/window/: config.ini  display.py  (+1 more)
lura/modes/: main.py
lura/render/: __init__.py  annotation.py  document.py  page.py
lura/ui/: buffer.py  display.py  docks.py  statusbar.py  window.py
lura/utils/: __init__.py  buffer.py  configure.py  display.py  helpers.py  manager.py  mode.py  plugin.py  tables.py  widgets.py  window.py
lura/view/: __init__.py  cursor.py  pageitem.py  viewer.py
lura/viewer/: __init__.py  cursor.py  pageitem.py  tileitem.py  view.py
src/lura/: __init__.py  cli.py  config.ini  config.toml  config.yaml  lura.py  main.py  plugs  run.py  style.css  style.toml
test/: pyvenv.cfg  test_plug_intents.py
tests/: conftest.py
(+413 files in other folders)
