[tool.poetry]
name = "lura"
version = "0.0.1"
description = "A viewer"
authors = ["A O <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ohu = {path = "/home/adam/code/ohu", develop = true}
plug = {path = "/home/adam/code/plug", extras=["qt"], develop = true}
# error python-poppler-qt5==21.3.0

[tool.poetry.scripts]
lura = "lura.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
