[tool.poetry]
name = "lura"
version = "0.0.1"
readme = "README.md"
description = "A viewer"
authors = ["A O <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
plug = {path = "/home/adam/code/plug", extras=["qt"], develop = true}

[tool.poetry.scripts]
lura = "lura.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
